--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 
   <script src="js/main.js" type="module"></script>
   <script src="leaflet/leaflet.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
 
 </body>
 </html>
